--- a/browser/debug.html
+++ b/browser/debug.html
@@ -5,7 +5,7 @@
   <script src="/fcoin.js"></script>
 </head>
 <body>
-  <h1>Bcoin</h1>
+  <h1>Folmcoin</h1>
   <p>Use the console to access `global.fcoin`.</p>
 </body>
 </html>
